--- a/website/app/templates/index.html
+++ b/website/app/templates/index.html
@@ -1,10 +1,14 @@
 {% extends 'base.html' %}
-
 {% block content %}
-<div class=row>
-            <div class="column">
-                <p>this website shall recommend you some great movies, that you should watch. based only on the input of your three most favourite movies.as of now only movies before 2020 are considered.</p>
-                <p>this whole dataset is based on the <a href="https://grouplens.org/datasets/movielens/" target="blank">movielense dataset</a>, containing 25 million ratings.</p>
-            </div>
+    <div class="row">
+        <div class="column">
+            <h2>some information</h2>
         </div>
+    </div>
+    <div class=row>
+        <div class="column">
+            <p>this website shall recommend you some great movies, that you should watch. based only on the input of your three most favourite movies.as of now only movies before 2020 are considered.</p>
+            <p>this whole dataset is based on the <a href="https://grouplens.org/datasets/movielens/" target="blank">movielense dataset</a>, containing 25 million ratings.</p>
+        </div>
+    </div>
 {% endblock %}
