refactors top 25 movie list

--- a/website/app/templates/top-movies.html
+++ b/website/app/templates/top-movies.html
@@ -4,7 +4,7 @@
 {% block content %}
     <h2>25 top rated movies until end of 2019</h2>
     <p>//here you can see the top ten movies of all time.</p>
-    <p>surprisingly tv shows are also incuded</p>
+    <p>it seems like some tv shows snuck into the data</p>
     <table>
         <thead>
             <tr>
