--- a/website/app/templates/rate-movies.html
+++ b/website/app/templates/rate-movies.html
@@ -11,4 +11,18 @@
             </form>
         </div>
     </div>
+    <hr>
+    <div class="row">
+        <h1>search 2</h1>
+        <form action="" method="post" novalidate="">
+            {{ form.hidden_tag () }}
+            <p>
+                {{ form.movie_title.label }}<br>
+                {{ form.movie_title(size=40) }}
+            </p>
+            <p>
+                {{ form.submit() }}
+            </p>
+        </form>
+    </div>
 {% endblock %}
