--- a/website/app/templates/index.html
+++ b/website/app/templates/index.html
@@ -10,5 +10,8 @@
             <p>this website shall recommend you some great movies, that you should watch. based only on the input of your three most favourite movies.as of now only movies before 2020 are considered.</p>
             <p>this whole dataset is based on the <a href="https://grouplens.org/datasets/movielens/" target="blank">movielense dataset</a>, containing 25 million ratings.</p>
         </div>
+        <div>
+            {{ g.lookup }}
+        </div>
     </div>
 {% endblock %}
