--- a/website/app/templates/base.html
+++ b/website/app/templates/base.html
@@ -32,7 +32,7 @@
                         <a class="button button-clear" href="{{ url_for('rate_movies') }}">rate movies</a>
                     </div>
                     <div class="column">
-                        <a class="button button-clear" href="">recommendations</a>
+                        <a class="button button-clear" href="{{ url_for('recommendations') }}">recommendations</a>
                     </div>
                 </div>
             </nav>
