--- a/website/app/templates/rate-movies.html
+++ b/website/app/templates/rate-movies.html
@@ -2,7 +2,7 @@
 {% block content %}
     <form action="/rate-movies">
         <div class="row">
-            <div class="column column-80">
+            <div class="column column-90">
                 <input id="movie_autocomplete" type="text" name="search_field" placeholder="search me ...">
             </div>
             <div class="column">
@@ -12,7 +12,7 @@
     </form>
     {% if results|length > 0 %}
         <div class="container">
-            <h2>here are your seach results</h2>
+            <h2>displaying {{ results|length }} search results</h2>
             <p>feel free to rate them</p>
             <table>
                 <thead>
