stores ratings in session

--- a/website/app/templates/recommendations.html
+++ b/website/app/templates/recommendations.html
@@ -2,5 +2,9 @@
 
 {% block content %}
     <h1>Hallo</h1>
-
+    <ul>
+    {% for element in session %}
+        <li>{{session[element][0]}}</li>
+    {% endfor %}
+    </ul>
 {% endblock %}
