ready for deployment

--- a/website/app/templates/recommendations.html
+++ b/website/app/templates/recommendations.html
@@ -15,7 +15,7 @@
         </div>
         <div class="column">
             <form action="">
-                <input type="submit" name="get_recs" id="get_clustering_recs" value="get recommendations form people like you" >
+                <input type="submit" name="get_recs" id="get_clustering_recs" value="get recommendations from people like you" >
             </form>
         </div>
     </div>
